--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.15.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.opencsv:opencsv:4.0"
+    implementation files("Jars/opencsv-4.1.jar")
 }
 
 Properties props = new Properties()
